<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Guest"
    android:padding="24dp">
    <LinearLayout
        android:id="@+id/headerBar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/Header_Back"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="The Cracker"
            android:textAlignment="center"
            android:textColor="@color/Header_Text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/headerBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/textResName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/textResNameHint"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/textResDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/textResDateHint"
            android:textAlignment="center"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"/>

        <EditText
            android:id="@+id/textResTime"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/textResTimeHint"
            android:textAlignment="center"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"/>

        <Button
            android:id="@+id/buttonResSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/buttonReservation" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>